Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/cycle/T8193561.out
T8193561.java:9:1: compiler.err.cyclic.inheritance: p.T8193561
1 error
